Update cogna add tool param required option tool enable/disable add tab/accordion On Activate Fix form progressive/multi-step form. Prevent jump will be ignore if not multistep Fix multistep for accordion.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -263,6 +263,9 @@ body {
 .text-centered {
   text-align: center;
 }
+a {
+  text-decoration: none;
+}
 input.rounded {
   outline: none;
 }
